--- a/css/main.css
+++ b/css/main.css
@@ -1,29 +1,33 @@
-html,body{
-    margin:0;
-    padding:0;
-    width:100%;
-    height:100%;
+html, body {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100%;
     overflow-y: hidden;
-  }
-  #app{
+}
+
+#app {
     display: flex;
     display: -webkit-flex;
     flex-direction: column;
-    height:100%;
-  }
-  .mainContent{
+    height: 100%;
+}
+
+.mainContent {
     flex: 1;
-    width:100%;
+    width: 100%;
     position: relative;
-  }
-  .topBar{
-    width:100%;
+}
+
+.topBar {
+    width: 100%;
     background-color: #545c64;
     color: white;
     display: flex;
     display: -webkit-flex;
-  }
-  .topBar_title {
+}
+
+.topBar_title {
     padding: 0 50px;
     font-size: 20px;
     text-align: center;
@@ -33,47 +37,53 @@ html,body{
     align-content: center;
     flex-direction: column;
 }
-  .topBar_menu{
+
+.topBar_menu {
     flex: 1
-  }
-  .leftForm{
-    width:300px;
+}
+
+.leftForm {
+    width: 300px;
     position: absolute;
-    left:30px;
-    bottom:50%;
-    z-index:1000;
-    transform:translate(0,-50%);
-  }
+    left: 30px;
+    top: 50%;
+    z-index: 1000;
+    transform: translateY(-50%);
+    -webkit-transform: translateY(-50%);
+}
 
-   .bottomForm{
-    width:100%;
+.bottomForm {
+    width: 100%;
     position: absolute;
-    bottom:0px;
-    z-index:1000;
-  }
+    bottom: 0px;
+    z-index: 1000;
+}
 
-  .mapContainer{
-    height:100%;
-    width:100%;
-  }
+.mapContainer {
+    height: 100%;
+    width: 100%;
+}
 
-  .functionButton{
-    display:flex;
+.functionButton {
+    display: flex;
     justify-content: center;
-  }
+}
 
-  .el-card__body{
+.el-card__body {
     padding: 10px;
-  }
-  .el-card__header{
-    padding: 10px 20px;
-  }
+}
 
-  .fade-enter-active, .fade-leave-active {
+.el-card__header {
+    padding: 10px 20px;
+}
+
+.fade-enter-active, .fade-leave-active {
     transition: opacity 1.5s;
     -webkit-transition: opacity 1.5s;
-  }
-  .fade-enter, .fade-leave-to /* .fade-leave-active below version 2.1.8 */ {
+}
+
+.fade-enter, .fade-leave-to /* .fade-leave-active below version 2.1.8 */
+{
     transform: translateX(-330px);
     opacity: 0;
-  }
+}
